Fixed IE Float Parent Collapse Bug with overflow:hidden. Still looks like shit in IE, but I could not care less.

--- a/css/widget.css
+++ b/css/widget.css
@@ -129,6 +129,7 @@
 	border-bottom: 1px dashed #EDE8EA;
 	padding: 0 0 7px;
 	display: block;
+	overflow: hidden; /* KM: Fix IE Collapse */
 }
 .social-img img {
 	float: left;
